REENレビュー第一回

--- a/index.html
+++ b/index.html
@@ -11,6 +11,249 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <div class="wrapper">
+    <div class="wrapper2">
+      <div class="wrapper__center">
+        <header class="header clearfix">
+          <addrres>
+            <p class="mail"><img src="./img/header/icon-mail-off.png" class="mail_icon">info@reen.com</p>
+            <p class="tel"><img src="./img/header/icon-tel-off.png" class="tel_icon">+00(123)456 78 90</p>
+          </addrres>
+          <div class="header__icon">
+            <figure class="header__img">
+              <div class="header__mask"></div>
+            </figure>
+            <figure class="header__img2">
+              <div class="header__mask"></div>
+            </figure>
+            <figure class="header__img3">
+              <div class="header__mask"></div>
+            </figure>
+            <figure class="header__img4">
+              <div class="header__mask"></div>
+            </figure>
+            <figure class="header__img5">
+              <div class="header__mask"></div>
+            </figure>
+            <figure class="header__img6">
+              <div class="header__mask"></div>
+            </figure>
+          </div>
+        </header>
+      </div>
+    </div>
+      <div class="wrapper__center">
+        <header class="header__nav clearfix">
+        <img class="reen__logo" src="./img/header/logo.png">
+          <nav>
+            <ul class=page__nav>
+              <li>HOME</li>
+              <li>PORTFOLIO</li>
+              <li>BLOG</li>
+              <li>PAGES</li>
+              <li>FEATURES</li>
+              <li>MEGA MENU</li>
+              <li>CONTACT</li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+      <main class="wrapper3">
+        <div class="wrapper__center">
+          <article>
+            <p class="made__for__designers">MADE FOR DESIGNERS</p>
+            <p class="made__for__designers__sub">Create your online portfolio in minutes with the professionally and lovingly designed REEN<span>website template. Custmize your site with vertille and easy to use features.</span></p>
+            <div class="get__standard__now">
+            <button class="btn">GET STANDARD NOW</button>
+            </div>
+          </article>
+        </div>
+      </main>
+        <div class="wrapper4">
+          <div class="wrapper__center">
+            <article>
+            <p class="Beautiful__clean">Beautiful. Clean. Responive.</p>
+            <p class="Beautiful__clean__sub">REEN is a high-quality solution for those who want a beautiful website in no time.</p>
+            <p class="Beautiful__clean__sub">It's fully responsitive and will adapt itself to any mobile device. iPad,iPhone,Android,</p>
+            <p class="Beautiful__clean__sub">it doesn't matter. Your coutnet will always looks its absolute best.</p>
+            </article>
+          </div>
+        </div>
+        <div class="wrapper5 clearfix">
+          <div class="wrapper__center">
+            <article>
+              <section class="content">
+                <figure class="content__img">
+                  <img src="./img/main/description-passion.png">
+                </figure>
+                <div class="content__box">
+                  <p class="content__txt">passion</p>
+                  <p class="content__txt__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+                </div>
+              </section>
+              <section class="content">
+                <figure class="content__img">
+                  <img src="./img/main/description-creativity.png">
+                </figure>
+                <div class="content__box">
+                  <p class="content__txt">Creativity</p>
+                  <p class="content__txt__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+                </div>
+              </section>
+              <section class="content">
+                <figure class="content__img">
+                  <img src="./img/main/description-quality.png">
+                </figure>
+                <div class="content__box">
+                  <p class="content__txt">Quality</p>
+                  <p class="content__txt__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+                </div>
+              </section>
+            </article>
+          </div>
+        </div>
+        <div class="wrapper6">
+          <div class="wrapper__center clearfix">
+            <article>
+              <p class="Check__out">Check out our latest works</p>
+              <p class="Check__out__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor.</p>
+              <div class="wrapper7 clearfix">
+                <figure class="Grand__hotel">
+                  <img src="./img/main/work-main-1.jpg">
+                  <figcaption class="mask">
+                    <p class="hotel__mask__txt">+</p>
+                  </figcaption>
+                </figure>
+                <div class="Grand__hotel__sub">
+                  <p class="Grand__hotel__txt">Grand Motel gets an identity brushup</p>
+                  <p class="Grand__hotel__txt2">Identity</p>
+                </div>
+              </div>
+              <div class="wrapper7 clearfix">
+                <figure class="Grand__hotel">
+                  <img src="./img/main/work-main-2.jpg">
+                  <figcaption class="mask">
+                    <p class="hotel__mask__txt">+</p>
+                  </figcaption>
+                </figure>
+                <div class="Grand__hotel__sub">
+                <p class="Grand__hotel__txt">Fresh branding for a creative startup</p>
+                <p class="Grand__hotel__txt2">Identity</p>
+                </div>
+              </div>
+              <section class="imgs clearfix">
+                <figure class="Check__out__imgs">
+                  <img src="./img/main/work-sub-1.jpg">
+                  <figcaption class="mask">
+                    <p class="mask__txt">Astor & Yancy</p>
+                    <p class="mask__txt2">Identity</p>
+                  </figcaption>
+                </figure>
+                 <figure class="Check__out__imgs">
+                  <img src="./img/main/work-sub-2.jpg">
+                  <figcaption class="mask">
+                    <p class="mask__txt">Astor & Yancy</p>
+                    <p class="mask__txt2">Identity</p>
+                  </figcaption>
+                </figure>
+                 <figure class="Check__out__imgs">
+                  <img src="./img/main/work-sub-3.jpg">
+                  <figcaption class="mask">
+                    <p class="mask__txt">Astor & Yancy</p>
+                    <p class="mask__txt2">Identity</p>
+                  </figcaption>
+                </figure>
+                 <figure class="Check__out__imgs">
+                  <img src="./img/main/work-sub-4.jpg"></li>
+                  <figcaption class="mask">
+                    <p class="mask__txt">Astor & Yancy</p>
+                    <p class="mask__txt2">Identity</p>
+                  </figcaption>
+                </figure>
+              </section>
+            </article>
+          </div>
+        </div>
+        <div class="wrapper8">
+          <div class="wrapper__center">
+            <p class="Want__to">Want to work with us?</p>
+            <p class="Want__to__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor.</p>
+            <p class="Want__to__sub2">Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+            <button class="btn2">GET IN TOUCH</button>
+          </div>
+        </div>
+        <footer class="footer">
+            <div class="who__we__are clearfix">
+              <div class="footer__content">
+                <p class="who__we__are__txt">WHO WE ARE</p>
+                <img src="./img/footer/logo.png">
+                <p class="who__we__are__txt__sub">Magnis modipsae  volortatati andigen daepaditem quiate re porem auto labor. Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
+                <p class="More__about">More about ds →</p>
+              </div>
+              <div class="footer__content__img">
+                <p class="who__we__are__txt">LATEST WORKS</p>
+                  <figure class="footer__img">
+                    <img src="./img/footer/thumb-1.jpg">
+                    <figcaption class="footer__mask">
+                      <p class="footer__mask__txt">+</p>
+                    </figcaption>
+                  </figure>
+                  <figure class="footer__img">
+                    <img src="./img/footer/thumb-2.jpg">
+                    <figcaption class="footer__mask">
+                      <p class="footer__mask__txt">+</p>
+                    </figcaption>
+                  </figure>
+                  <figure class="footer__img">
+                    <img src="./img/footer/thumb-3.jpg">
+                    <figcaption class="footer__mask">
+                      <p class="footer__mask__txt">+</p>
+                    </figcaption>
+                  </figure>
+                  <figure class="footer__img">
+                    <img src="./img/footer/thumb-4.jpg">
+                    <figcaption class="footer__mask">
+                      <p class="footer__mask__txt">+</p>
+                    </figcaption>
+                  </figure>
+              </div>
+              <div class="footer__content">
+                <p class="get__in__touch">GET IN TOUCH</p>
+                <p class="who__we__are__txt__sub">Doloreiur quia commlou ptatemp dolupta oreprerum tibusam eumenis et consent acculllgnis dentibea autem inisitia.</p>
+                <address>
+                  <ul>
+                    <li class="footer__info"><img class="info__imgs" src="./img/footer/icon-address-off.png">84 Street,City,State 24813</li>
+                    <li class="footer__info"><img class="info__imgs" src="./img/footer/icon-mail-off.png">+00(123)456 78 90</li>
+                    <li class="footer__info"><img class="info__imgs" src="./img/footer/icon-tel-off.png">info@reen.com</li>
+                  </ul>
+                </address>
+              </div>
+            <div class="footer__content">
+              <p class="get__in__touch">FREE UPDATES</p>
+              <p class="who__we__are__txt__sub">Conecus iure posae volor remped modis aut lor volor accebora incim resto explabo.</p>
+              <form>
+              <input class="txt__area" type="text" name="namae" placeholder="info@fuviz.com"><button class="btn3">SUBSCRIBE</button>
+              </form>
+            </div>
+          </div>
+        </footer>
+        <footer class="footer__last">
+          <div class="wrapper__center">
+            <div class="label clearfix">
+              <p class="sign">@2014 REEN.All rights reserved.</p>
+              <nav>
+                <ul class="label__nav">
+                  <li>Contact</li>
+                  <li>Services</li>
+                  <li>About</li>
+                  <li>Blog</li>
+                  <li>Portfolio</li>
+                  <li>Home</li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </footer>
+  </div>
 </body>
 </html>
