REENレビュー第２回

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <p class="Grand__hotel__txt2">Identity</p>
             </div>
           </section>
-          <section class="grand__hotel__box clearfix">
+          <section class="Grand__hotel__box clearfix">
             <figure class="Grand__hotel">
               <img src="./img/main/work-main-2.jpg">
               <figcaption class="mask">
@@ -192,25 +192,25 @@
           <p class="who__we__are__txt">LATEST WORKS</p>
             <figure class="footer__img">
               <img src="./img/footer/thumb-1.jpg">
-              <figcaption class="footer__mask">
+              <figcaption class="mask">
                 <p class="footer__mask__txt">+</p>
               </figcaption>
             </figure>
             <figure class="footer__img">
               <img src="./img/footer/thumb-2.jpg">
-              <figcaption class="footer__mask">
+              <figcaption class="mask">
                 <p class="footer__mask__txt">+</p>
               </figcaption>
             </figure>
             <figure class="footer__img">
               <img src="./img/footer/thumb-3.jpg">
-              <figcaption class="footer__mask">
+              <figcaption class="mask">
                 <p class="footer__mask__txt">+</p>
               </figcaption>
             </figure>
             <figure class="footer__img">
               <img src="./img/footer/thumb-4.jpg">
-              <figcaption class="footer__mask">
+              <figcaption class="mask">
                 <p class="footer__mask__txt">+</p>
               </figcaption>
             </figure>
