REENレビュー第２回

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="center clearfix">
           <p class="Check__out">Check out our latest works</p>
           <p class="Check__out__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor.</p>
-          <section class="grand__hotel__box clearfix">
+          <section class="Grand__hotel__box clearfix">
             <figure class="Grand__hotel">
               <img src="./img/main/work-main-1.jpg">
               <figcaption class="mask">
