REENレビュー第３回

--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
           <p class="who__we__are__txt__sub">Conecus iure posae volor remped modis aut lor volor accebora incim resto explabo.</p>
           <form>
           <input class="txt__area" type="text" name="subscribe" placeholder="info@fuviz.com">
+          <input class="btn3" type="button" value="SUBSCRIBE">
           </form>
-          <button class="btn3">SUBSCRIBE</button>
         </div>
       </div>
       <div class="container naiby clearfix">
