REENレビュー第４回

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <div class="header__nav white clearfix">
           <img class="reen__logo" src="./img/header/logo.png">
             <nav>
-              <ul class=page__nav>
-                <li class=nav__txt>HOME</li>
-                <li class=nav__txt>PORTFOLIO</li>
-                <li class=nav__txt>BLOG</li>
-                <li class=nav__txt>PAGES</li>
-                <li class=nav__txt>FEATURES</li>
-                <li class=nav__txt>MEGA MENU</li>
-                <li class=nav__txt>CONTACT</li>
+              <ul class="page__nav">
+                <li class="nav__txt">HOME</li>
+                <li class="nav__txt">PORTFOLIO</li>
+                <li class="nav__txt">BLOG</li>
+                <li class="nav__txt">PAGES</li>
+                <li class="nav__txt">FEATURES</li>
+                <li class="nav__txt">MEGA MENU</li>
+                <li class="nav__txt">CONTACT</li>
               </ul>
             </nav>
           </div>
@@ -76,11 +76,7 @@
           <p class="Beautiful__clean__sub">REEN is a high-quality solution for those who want a beautiful website in no time.</p>
           <p class="Beautiful__clean__sub">It's fully responsitive and will adapt itself to any mobile device. iPad,iPhone,Android,</p>
           <p class="Beautiful__clean__sub">it doesn't matter. Your coutnet will always looks its absolute best.</p>
-        </div>
-      </section>
-      <section class="container white clearfix">
-        <div class="center">
-          <section class="content">
+          <div class="content">
             <figure class="content__img">
               <img src="./img/main/description-passion.png">
             </figure>
@@ -88,8 +84,8 @@
               <p class="content__txt">passion</p>
               <p class="content__txt__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
             </div>
-          </section>
-          <section class="content">
+          </div>
+          <div class="content">
             <figure class="content__img">
               <img src="./img/main/description-creativity.png">
             </figure>
@@ -97,8 +93,8 @@
               <p class="content__txt">Creativity</p>
               <p class="content__txt__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
             </div>
-          </section>
-          <section class="content">
+          </div>
+          <div class="content">
             <figure class="content__img">
               <img src="./img/main/description-quality.png">
             </figure>
@@ -106,14 +102,14 @@
               <p class="content__txt">Quality</p>
               <p class="content__txt__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
             </div>
-          </section>
+          </div>
         </div>
       </section>
       <section class="container grey">
         <div class="center clearfix">
           <p class="Check__out">Check out our latest works</p>
           <p class="Check__out__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor.</p>
-          <section class="Grand__hotel__box clearfix">
+          <div class="Grand__hotel__box clearfix">
             <figure class="Grand__hotel">
               <img src="./img/main/work-main-1.jpg">
               <figcaption class="mask">
@@ -124,8 +120,8 @@
               <p class="Grand__hotel__txt">Grand Motel gets an identity brushup</p>
               <p class="Grand__hotel__txt2">Identity</p>
             </div>
-          </section>
-          <section class="Grand__hotel__box clearfix">
+          </div>
+          <div class="Grand__hotel__box clearfix">
             <figure class="Grand__hotel">
               <img src="./img/main/work-main-2.jpg">
               <figcaption class="mask">
@@ -133,11 +129,11 @@
               </figcaption>
             </figure>
             <div class="Grand__hotel__sub">
-            <p class="Grand__hotel__txt">Fresh branding for a creative startup</p>
-            <p class="Grand__hotel__txt2">Identity</p>
+              <p class="Grand__hotel__txt">Fresh branding for a creative startup</p>
+              <p class="Grand__hotel__txt2">Identity</p>
             </div>
-          </section>
-          <section class="center grey clearfix">
+          </div>
+          <div class="center grey clearfix">
             <figure class="Check__out__imgs">
               <img src="./img/main/work-sub-1.jpg">
               <figcaption class="mask">
@@ -166,14 +162,14 @@
                 <p class="mask__txt">Identity</p>
               </figcaption>
             </figure>
-          </section>
+          </div>
         </div>
       </section>
       <section class="container white">
         <div class="center">
           <p class="Want__to">Want to work with us?</p>
           <p class="Want__to__sub">Magnis modipsae que lib volortatati andigen daepaditem quiate re porem auto labor.</p>
-          <p class="Want__to__sub sub2">Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.</p>
+          <p class="Want__to__sub sub2">Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</p>
           <div class="get Want__to__btn">
             <button class="btn">GET IN TOUCH</button>
           </div>
@@ -237,7 +233,7 @@
       </div>
       <div class="container naiby clearfix">
         <div class="center">
-            <p class="sign">@2014 REEN.All rights reserved.</p>
+          <p class="sign">@2014 REEN.All rights reserved.</p>
             <nav>
               <ul class="label__nav">
                 <li>Contact</li>
